implement verify email template delete use courses and enrolled courses from get all courses add isFav to response with course implement get all fav courses implement add and delete course to fav implement get uploaded courses by user
