# routes/course.js
@@ -3,6 +3,9 @@ const {
     getAllCourses,
     createCourse,
     getCourseById,
+    getAllFavCourses,
+    addCourseToFav,
+    deleteCourseFromFav,
 } = require("../controllers/course");
 const router = express.Router();
 const multer = require("multer");
@@ -14,5 +17,7 @@ router
     .route("/")
     .get(getAllCourses)
     .post(upload.single("coursePicture"), createCourse);
+router.route("/fav/").get(getAllFavCourses);
+router.route("/fav/:courseId").post(addCourseToFav).delete(deleteCourseFromFav);
 router.route("/:courseId").get(getCourseById);
 module.exports = router;
