# routes/user.js
@@ -4,7 +4,11 @@ const multer = require("multer");
 const storage = multer.memoryStorage();
 const upload = multer({ storage, ...checkPicture });
 
-const { getUserData, updateUserData } = require("../controllers/user");
+const {
+    getUserData,
+    updateUserData,
+    getUploadedCourses,
+} = require("../controllers/user");
 const router = express.Router();
 
 router
@@ -12,4 +16,5 @@ router
     .get(getUserData)
     .post(upload.single("profilePicture"), updateUserData);
 
+router.route("/uploaded-courses").get(getUploadedCourses);
 module.exports = router;
